# api_django_cadastro_de_users

./: README.md  pyproject.toml
api_rest/: models.py  tests.py  views.py
api_rest/migrations/: 0001_initial.py
api_root/: settings.py  urls.py
